# twitter-clone

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: tests.yml
app/: db.py
