[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["Sunisth Kumar <58183198+ksunisth@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
